# ChangeLog for app-arch/unrar
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/unrar/ChangeLog,v 1.136 2010/04/13 18:28:35 armin76 Exp $

  13 Apr 2010; Raúl Porcel <armin76@gentoo.org> unrar-3.9.7.ebuild:
  alpha/sparc stable wrt #308127

  29 Mar 2010; Jeroen Roovers <jer@gentoo.org> unrar-3.9.7.ebuild:
  Stable for HPPA (bug #308127).

*unrar-3.9.10 (19 Mar 2010)

  19 Mar 2010; Mike Frysinger <vapier@gentoo.org> +unrar-3.9.10.ebuild:
  Version bump #309865 by Samuli Suominen.

  12 Mar 2010; Markos Chandras <hwoarang@gentoo.org> unrar-3.9.7.ebuild:
  Stable on amd64 wrt bug #308127

  11 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> unrar-3.9.7.ebuild:
  x86 stable wrt bug #308127

  10 Mar 2010; Joseph Jezak <josejx@gentoo.org> unrar-3.9.7.ebuild:
  Marked ppc/ppc64 stable for bug #308127.

*unrar-3.9.9 (06 Mar 2010)

  06 Mar 2010; Mike Frysinger <vapier@gentoo.org> +unrar-3.9.9.ebuild:
  Version bump #305373 by Arseny Solokha.

*unrar-3.9.7 (16 Dec 2009)

  16 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> +unrar-3.9.7.ebuild:
  Version bump wrt #297130, thanks to Arseny Solokha for reporting.

*unrar-3.9.6 (01 Sep 2009)

  01 Sep 2009; Mike Frysinger <vapier@gentoo.org> +unrar-3.9.6.ebuild:
  Version bump.

  01 Dec 2008; Brent Baude <ranger@gentoo.org> unrar-3.8.5.ebuild:
  stable ppc64, bug 249060

  29 Nov 2008; Raúl Porcel <armin76@gentoo.org> unrar-3.8.5.ebuild:
  alpha/arm/ia64/sparc stable wrt #249060

  29 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org> unrar-3.8.5.ebuild:
  ppc stable, bug #249060

  28 Nov 2008; Markus Meier <maekke@gentoo.org> unrar-3.8.5.ebuild:
  amd64/x86 stable, bug #249060

  27 Nov 2008; Jeroen Roovers <jer@gentoo.org> unrar-3.8.5.ebuild:
  Stable for HPPA (bug #249060).

*unrar-3.8.5 (26 Oct 2008)

  26 Oct 2008; Mike Frysinger <vapier@gentoo.org> +unrar-3.8.5.ebuild:
  Version bump #241614 by Fabio Rossi.
